--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,10 +1,34 @@
-	.title-arch {
-		text-align: center;
-		margin: 50px 0;
-		font-size: 22px;
-		letter-spacing: 2px;
-		text-transform: uppercase;
-	}
+body{
+	background-image: url(../img/fondo.jpg);
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+}
+.colorAzul{
+	color: #D4DBDC !important; 
+}
+.colorCafesito{
+	color: #321507 !important;
+}
+.colorGrisito{
+	color: #907E68 !important;
+}
+.colorVerde{
+	color: #647C0E !important;
+}
+.colorAzulito{
+	color: #9594A3 !important;
+}
+.blanco{
+	color: white;
+}
+.title-arch {
+	text-align: center;
+	margin: 50px 0;
+	font-size: 22px;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	color: #9594A3;
+}
 .project {
 	width: 100%;
 	height: 500px;
@@ -175,7 +199,7 @@ section {
 	color: #000;
 }
 .top-bar a.navbar-brand span {
-	color: #0297ff;
+	color: #647C0E;
 }
 .top-bar .nav-link {
 	color: #fff;
@@ -204,7 +228,8 @@ section {
 
 /*Swiper*/
 .swiper-container {
-	width: 100%;
+	margin-top: 5%;
+	width: 90%;
 	height: 100vh;
 }
 .swiper-slide {
