--- a/contactanoss/css/style.css
+++ b/contactanoss/css/style.css
@@ -35,6 +35,9 @@ body{
 .margenrigth{
 	margin-right: 400%;
 }
+.margenleft{
+	margin-left: 10%;
+}
 /* TOP HEADER
 -------------------------------------------------- */
 
